form.indexに誤字があったため修正

--- a/form.html
+++ b/form.html
@@ -14,7 +14,7 @@
       
       <label for="Name" >名前:</label>
       <input type="text" id="Name"  name="name_first">
-      <input type~"text" id="Name"  name="name_last"> 
+      <input type="text" id="Name"  name="name_last"> 
       <br> 
 
       <label for="Sex" >性別:</label>
