動作に影響しない部分を修正、formCheckのfontを削除

--- a/form.html
+++ b/form.html
@@ -12,17 +12,17 @@
     <fieldset>
       <legend>フォーム</legend>
       
-      <label for="Name" >名前:</label>
-      <input type="text" id="Name"  name="name_first">
-      <input type="text" id="Name"  name="name_last"> 
+      <label for="Name">名前:</label>
+      <input type="text" id="Name" name="name_first">
+      <input type="text" id="Name" name="name_last"> 
       <br> 
 
-      <label for="Sex" >性別:</label>
+      <label for="Sex">性別:</label>
       <input type="radio" id="Sex" name="sex" value="men">男性
       <input type="radio" id="Sex" name="sex" value="woman">女性
       <br>
 
-      <label for="PostNumber" >郵便番号:</label>
+      <label for="PostNumber">郵便番号:</label>
       <input type="text" id="PostNumber" name="post_first">
       -
       <input type="text" id="PostNumber"  name="post_last">
@@ -38,14 +38,14 @@
       <br>
 
       <label for="MailAddress">メールアドレス:</label>
-      <input type="text" for="MailAddress" name="mail">
+      <input type="text" id="MailAddress" name="mail">
       <br>
 
       <label name="hobby" for="Hobby">趣味</label>
         <input type="checkbox" id="Hobby" name="hobby" value="音楽鑑賞">音楽鑑賞 
         <input type="checkbox" id="Hobby" name="hobby" value="映画鑑賞">音楽鑑賞
         <input type="checkbox" id="Hobby" name="hobby" value="その他">その他
-        <input type="text"  id="Hobby">
+        <input type="text" id="Hobby">
       </label>
       <br>
 
