--- a/form.html
+++ b/form.html
@@ -12,23 +12,23 @@
     <fieldset>
       <legend>フォーム</legend>
       
-      <label for="Name">名前:</label>
-      <input type="text" name="Name" id="name_first ">
-      <input type="text" name="Name" id"name_last"> 
+      <label name="Name">名前:</label>
+      <input type="text" name="Name" id="name_first">
+      <input type="text" name="Name" id="name_last"> 
       <br> 
 
-      <label for="Sex">性別:</label>
+      <label name="Sex">性別:</label>
       <input type="radio" name="Sex" id="men"><label for="men">男性</label>
       <input type="radio" name="Sex" id="woman"><label for="woman">女性</label>
       <br>
 
-      <label for="PostNumber">郵便番号:</label>
+      <label name="PostNumber">郵便番号:</label>
       <input type="text" name="PostNumber" id="post_first">
       -
       <input type="text" name="PostNumber" id="post_last">
       <br>
 
-      <label for="Prefecture">都道府県:</label>
+      <label name="Prefecture">都道府県:</label>
       <select name="Prefecture" id="prefecture" size=1>
         <option id="--">--</option>
         <option id="Tokyo">東京都</option>
@@ -37,11 +37,11 @@
       </select>
       <br>
 
-      <label for="MailAddress">メールアドレス:</label>
+      <label name="MailAddress">メールアドレス:</label>
       <input type="text" name="MailAddress" id="mail">
       <br>
 
-      <label name="hobby" for="Hobby">趣味</label>
+      <label name="Hobby">趣味</label>
         <input type="checkbox" name="Hobby" id="music"><label for="music">音楽鑑賞</label>
         <input type="checkbox" name="Hobby" id="movie"><label for="movie">音楽鑑賞</label>
         <input type="checkbox" name="Hobby" id="other"><label for="other">その他</label>
@@ -49,8 +49,8 @@
       </label>
       <br>
 
-      <label for="Opinion">ご意見</label>
-      <textarea id="Opinion" name=opinion></textarea>
+      <label name="Opinion">ご意見</label>
+      <textarea id="Opinion" name="opinion"></textarea>
       <br>
 
       <input type="submit" value="確認">
