ラジオボタン・セレクトボックス・チェックボックスの要素にvalueを追加

--- a/form.html
+++ b/form.html
@@ -18,8 +18,8 @@
       <br> 
 
       <label name="Sex">性別:</label>
-      <input type="radio" name="Sex" id="men"><label for="men">男性</label>
-      <input type="radio" name="Sex" id="woman"><label for="woman">女性</label>
+      <input type="radio" name="Sex" id="men" value="man"><label for="men">男性</label>
+      <input type="radio" name="Sex" id="woman" va;ie="woman"><label for="woman">女性</label>
       <br>
 
       <label name="PostNumber">郵便番号:</label>
@@ -30,10 +30,10 @@
 
       <label name="Prefecture">都道府県:</label>
       <select name="Prefecture" id="prefecture" size=1>
-        <option id="--">--</option>
-        <option id="Tokyo">東京都</option>
-        <option id="Saitama">埼玉県</option>
-        <option id="Gunma">群馬県</option>
+        <option id="--" value="--">--</option>
+        <option id="Tokyo" value="Tokyo">東京都</option>
+        <option id="Saitama" value="Saitama">埼玉県</option>
+        <option id="Gunma" value="Gunma">群馬県</option>
       </select>
       <br>
 
@@ -42,9 +42,9 @@
       <br>
 
       <label name="Hobby">趣味</label>
-        <input type="checkbox" name="Hobby" id="music"><label for="music">音楽鑑賞</label>
-        <input type="checkbox" name="Hobby" id="movie"><label for="movie">音楽鑑賞</label>
-        <input type="checkbox" name="Hobby" id="other"><label for="other">その他</label>
+        <input type="checkbox" name="Hobby" id="music" value="music"><label for="music">音楽鑑賞</label>
+        <input type="checkbox" name="Hobby" id="movie" value="movie"><label for="movie">音楽鑑賞</label>
+        <input type="checkbox" name="Hobby" id="other" value="other"><label for="other">その他</label>
         <input type="text" name="Hobby" id="otherDescript">
       </label>
       <br>
