--- a/form.html
+++ b/form.html
@@ -19,8 +19,8 @@
       <br> 
 
       <label>性別:</label>
-      <input type="radio" name="man" id="man" value="man"><label for="man">男性</label>
-      <input type="radio" name="woman" id="woman" va;ie="woman"><label for="woman">女性</label>
+      <input type="radio" name="sex" id="man" value="man"><label for="man">男性</label>
+      <input type="radio" name="sex" id="woman" va;ie="woman"><label for="woman">女性</label>
       <br>
 
       <label>郵便番号:</label>
@@ -43,9 +43,9 @@
       <br>
 
       <label>趣味</label>
-        <input type="checkbox" name="music" id="music" value="music"><label for="music">音楽鑑賞</label>
-        <input type="checkbox" name="movie" id="movie" value="movie"><label for="movie">映画鑑賞</label>
-        <input type="checkbox" name="other" id="other" value="other"><label for="other">その他</label>
+        <input type="checkbox" name="hobby" id="music" value="music"><label for="music">音楽鑑賞</label>
+        <input type="checkbox" name="hobby" id="movie" value="movie"><label for="movie">映画鑑賞</label>
+        <input type="checkbox" name="hobby" id="other" value="other"><label for="other">その他</label>
         <input type="text" name="other_descript" id="other_descript">
       </label>
       <br>
