誤字を見つけたため修正

--- a/form.html
+++ b/form.html
@@ -20,7 +20,7 @@
 
       <label>性別:</label>
       <input type="radio" name="sex" id="man" value="man"><label for="man">男性</label>
-      <input type="radio" name="sex" id="woman" va;ie="woman"><label for="woman">女性</label>
+      <input type="radio" name="sex" id="woman" value="woman"><label for="woman">女性</label>
       <br>
 
       <label>郵便番号:</label>
