各ページにHTML5のタグを使用するよう修正

--- a/finish.html
+++ b/finish.html
@@ -7,11 +7,17 @@
 </head>
 
 <body>
-  <h1>フォーム>完了</h1>
+  <header>
+    <h1>フォーム>完了</h1>
+  </header>
 
-  応募しました
-  <p><a href="index.html">TOPページへ</a><p>
+  <nav>
+    応募しました
+    <p><a href="index.html">TOPページへ</a><p>
+  </nav>
 
-  <p>Copyright 2014</p>
+  <footer>
+    <p>Copyright 2014</p>
+  </footer>
 </body>
 </html>
