--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
 </head>
 
 <body>
-  <h1>フォーム>TOPページ</h1>
+  <header>
+    <h1>フォーム>TOPページ</h1>
+  </header>
 
-  <p><a href="form.html">フォームを入力する</a></p>
+  <nav>
+    <p><a href="form.html">フォームを入力する</a></p>
+  </nav>
 
-  <p>Copyright 2014</p>
+  <footer>
+    <p>Copyright 2014</p>
+  </footer>
 </body>	
 </html>
