headerのスタイルを設定 #15

--- a/form.html
+++ b/form.html
@@ -3,7 +3,19 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Content-Style-Type" content="text/css">
   <title>フォーム画面</title>
+
+  <style type="text/css">
+  <!--
+    header {
+      margin-top:    10px;
+      margin-bottom; 10px;
+      font-size:     30px;
+      background:    #44aa44
+    }
+  -->
+  </style>
 </head>
 
 <body>
