その他のスタイルの設定 #15

--- a/formCheck.html
+++ b/formCheck.html
@@ -13,6 +13,9 @@
       font-size:        30px;
       background:       #44aa44
     }
+    form {
+      border:           solid 2px
+    }
   -->
   </style>
 </head>
