--- a/finish.html
+++ b/finish.html
@@ -8,10 +8,13 @@
   <style type="text/css">
   <!--
     header {
-      margin-top:10px;
-      margin-bottom:10px;
-      font-size:30px;
-      background:#44aa44
+      margin-top:     10px;
+      margin-bottom:  10px;
+      font-size:      30px;
+      background:     #44aa44
+    }
+    nav {
+      font-weight:    bold
     }
   -->
   </style>
