--- a/form.html
+++ b/form.html
@@ -10,9 +10,13 @@
   <!--
     header {
       margin-top:    10px;
-      margin-bottom; 10px;
+      margin-bottom: 10px;
       font-size:     30px;
       background:    #44aa44
+    }
+    form label {
+      color:     #664422;
+      font-size: 30px
     }
   -->
   </style>
