セミコロンを修正 #15

--- a/form.html
+++ b/form.html
@@ -12,11 +12,11 @@
       margin-top:    10px;
       margin-bottom: 10px;
       font-size:     30px;
-      background:    #44aa44
+      background:    #44aa44;
     }
     form label {
       color:     #664422;
-      font-size: 30px
+      font-size: 30px;
     }
   -->
   </style>
