--- a/formCheck.html
+++ b/formCheck.html
@@ -11,10 +11,10 @@
       margin-top:       10px;
       margin-bottom:    10px;
       font-size:        30px;
-      background:       #44aa44
+      background:       #44aa44;
     }
     form {
-      border:           solid 2px
+      border:           solid 2px;
     }
   -->
   </style>
