--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
   <style type="text/css">
   <!--
     header {
-      margin-top:    10px;
-      margin-bottom: 10px;
-      font-size:     30px;
-      background:    #44aa44
+      margin-top:     10px;
+      margin-bottom;  10px;
+      background:     #44aa44;
     }
   -->
   </style>
-
 </head>
 
 <body>
