--- a/finish.html
+++ b/finish.html
@@ -11,10 +11,10 @@
       margin-top:     10px;
       margin-bottom:  10px;
       font-size:      30px;
-      background:     #44aa44
+      background:     #44aa44;
     }
     nav {
-      font-weight:    bold
+      font-weight:    bold;
     }
   -->
   </style>
