index.htmlのスタイル中の、;を:に修正 #15

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--
     header {
       margin-top:     10px;
-      margin-bottom;  10px;
+      margin-bottom:  10px;
       background:     #44aa44;
     }
   -->
