共通スタイルを設定 #16

--- a/finish.html
+++ b/finish.html
@@ -4,20 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
+  <link rel="stylesheet" type="text/css" href="common.css">
   <title>完了</title>
-  <style type="text/css">
-  <!--
-    header {
-      margin-top:     10px;
-      margin-bottom:  10px;
-      font-size:      30px;
-      background:     #44aa44;
-    }
-    nav {
-      font-weight:    bold;
-    }
-  -->
-  </style>
 </head>
 
 <body>
