--- a/index.html
+++ b/index.html
@@ -4,17 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
+  <link rel="stylesheet" type="text/css" href="common.css">
   <title>トップページ</title>
-
-  <style type="text/css">
-  <!--
-    header {
-      margin-top:     10px;
-      margin-bottom:  10px;
-      background:     #44aa44;
-    }
-  -->
-  </style>
 </head>
 
 <body>
