--- a/form.html
+++ b/form.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <link rel="stylesheet" type="text/css" href="common.css">
+  <link rel="stylesheet" type="text/css" href="form.css">
   <title>フォーム画面</title>
 </head>
 
