--- a/formCheck.html
+++ b/formCheck.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
-  <link rel="stylesheet" type="text.css" href="common.css">
+  <link rel="stylesheet" type="text/css" href="common.css">
+  <link rel="stylesheet" type="text/css" href="formCheck.css">
   <title>確認画面</title>
 </head>
 
