--- a/finish.html
+++ b/finish.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <link rel="stylesheet" type="text/css" href="common.css">
+  <link rel="stylesheet" type="text/css" href="finish.css">
   <title>完了</title>
 </head>
 
