課題3 即時関数を使用してアラート #47

--- a/JS_jQuery/index.html
+++ b/JS_jQuery/index.html
@@ -12,7 +12,7 @@
   </script>
 </head>
 
-<body>
+<body onLoad="( function func() { alert('HelloWorld!') }() );">
   <!-- header -->
   <header>
     <h1>jQueryサンプル</h1>
