jsを外部ファイル化・呼び出しをhtml内のjsに移動 #46

--- a/JS_jQuery/index.html
+++ b/JS_jQuery/index.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="Content-Type" content="text/html"; charset="utf-8">
   <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
+  <script type="text/javascript" src="scripts.js"></script>
   <script type="text/javascript">
   <!--
-    function alertText(text) {
-        window.alert(text);
-    }
+      alertText('HelloWorld!');
   -->
   </script>
+
 </head>
 
-<body onLoad="alertText('Hello World!');">
+<body>
   <!-- header -->
   <header>
     <h1>jQueryサンプル</h1>
