window.alertを直接使用するように変更 #46

--- a/JS_jQuery/index.html
+++ b/JS_jQuery/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="Content-Type" content="text/html"; charset="utf-8">
   <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
-  <script type="text/javascript" src="scripts.js"></script>
   <script type="text/javascript">
   <!--
-      alertText('HelloWorld!');
+      text = 'HelloWorld!';
+      window.alert(text);
   -->
   </script>
 
