課題2・3のファイルが逆だったので修正、使ってない関数を削除 #47

--- a/JS_jQuery/47_2.html
+++ b/JS_jQuery/47_2.html
@@ -14,7 +14,7 @@
   </script>
 </head>
 
-<body onLoad="( function func() { alert('HelloWorld!') }() );">
+<body onLoad="alertText('Hello World!');">
   <!-- header -->
   <header>
     <h1>jQueryサンプル</h1>
