--- a/JS_jQuery/47_3.html
+++ b/JS_jQuery/47_3.html
@@ -4,17 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="Content-Type" content="text/html"; charset="utf-8">
   <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
-  <script type="text/javascript">
-  <!--
-    function alertText(data) {
-        var text = data;
-        window.alert(text);
-    }
-  -->
-  </script>
 </head>
 
-<body onLoad="alertText('Hello World!');">
+<body onLoad="( function func() { alert('HelloWorld!') }() );">
   <!-- header -->
   <header>
     <h1>jQueryサンプル</h1>
