変数の宣言を追加 #46

--- a/JS_jQuery/index.html
+++ b/JS_jQuery/index.html
@@ -6,7 +6,7 @@
   <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
   <script type="text/javascript">
   <!--
-      text = 'HelloWorld!';
+      var text = 'HelloWorld!';
       window.alert(text);
   -->
   </script>
