ヘッダのフォントサイズ変更処理を追加 #48

--- a/JS_jQuery/48.html
+++ b/JS_jQuery/48.html
@@ -3,21 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="Content-Type" content="text/html"; charset="utf-8">
+
   <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
-  <script type="text/javascript">
-  <!--
-    operateDOM();
-  -->
   </script>
 </head>
 
 <body>
   <!-- header-->
   <header id="header">
-    <p id="testId">
-        <h1>jQueryサンプル</h1>
-    </p>
+    <h1>jQueryサンプル</h1>
   </header>
 
   <!-- content -->
@@ -26,7 +21,7 @@
   </article>
 
   <!-- footer -->
-  <footer>
+  <footer id ="footer">
     Copyright 2014
   </footer>
 </body>
