もっと見るボタン追加 #51

--- a/JS_jQuery/51.html
+++ b/JS_jQuery/51.html
@@ -19,6 +19,8 @@
     <table id="languageMat">
       <!-- script.jsで追加 -->
     </table>
+
+    <button type="button" id="more">もっと見る</button>
   </article>
 
   <!-- footer -->
