スクリプトファイルを一つに統一 #49

--- a/JS_jQuery/49.html
+++ b/JS_jQuery/49.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html"; charset="utf-8">
 
   <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
-  <script type="text/javascript" src="script_49_3.js"></script>
+  <script type="text/javascript" src="script49.js"></script>
 </head>
 
 <body>
